# Open_MPI

./: .gitignore  CMakeLists.txt  README.md  bitonic_sort  bitonic_sort.cpp  input.txt  page_rank.cpp  page_rank_single.cpp  test.cpp
